Show all button

--- a/registration-numbers.html
+++ b/registration-numbers.html
@@ -7,6 +7,13 @@
     <title>Registration Number</title>
     <link rel="stylesheet" href="./css/registration_number.css">
 
+    <script type="text/x-template" class="regTemplate">
+        {{callTotalOne}}
+        {{smsTotalOne}}
+        {{totalOne}}
+        
+      </script>
+
 </head>
 <body> 
     <div class="split">
