--- a/registration-numbers.html
+++ b/registration-numbers.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Number</title>
     <link rel="stylesheet" href="./css/registration_number.css">
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
     <script type="text/x-template" class="regTemplate">
-        {{callTotalOne}}
-        {{smsTotalOne}}
-        {{totalOne}}
+        {{#each regNumbers}}
+        <plates>{{this}}</plates>
+        
+        {{/each}}
         
       </script>
 
